--- a/docker_fullstack/api/package.json
+++ b/docker_fullstack/api/package.json
@@ -11,7 +11,10 @@
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "dotenv": "^16.4.5",
-    "cors": "^2.8.5"    
+    "cors": "^2.8.5",
+    "bcryptjs": "^3.0.2",
+    "jsonwebtoken": "^9.0.2",
+    "cookie-parser": "^1.4.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
