--- a/docker_fullstack/api/package.json
+++ b/docker_fullstack/api/package.json
@@ -5,13 +5,14 @@
   "type": "module",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon --legacy-watch src/index.js" 
+    "dev": "nodemon --legacy-watch src/index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "pg": "^8.11.3",
     "dotenv": "^16.4.5",
-    "cors": "^2.8.5"    
+    "cors": "^2.8.5",
+    "axios": "^1.13.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
