--- a/docker_fullstack/frontend/package.json
+++ b/docker_fullstack/frontend/package.json
@@ -8,7 +8,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.23.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "axios": "^1.13.2"
   },
   "scripts": {
     "start": "react-scripts start",
