--- a/docker_fullstack/frontend/package.json
+++ b/docker_fullstack/frontend/package.json
@@ -9,7 +9,8 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
-    "axios": "^1.13.2"
+    "axios": "^1.13.2",
+    "use-debounce": "^10.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
