--- a/docker_fullstack/api/package.json
+++ b/docker_fullstack/api/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon --legacy-watch src/index.js"
+    "dev": "nodemon --legacy-watch src/index.js",
+    "test": "dotenv -e .env.test -- node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -18,6 +19,9 @@
     "axios": "^1.13.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "jest": "^30.2.0",
+    "supertest": "^7.1.4",
+    "dotenv-cli": "^11.0.0"
   }
 }
