--- a/docker_fullstack/api/package.json
+++ b/docker_fullstack/api/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon --legacy-watch src/index.js",
-    "test": "dotenv -e .env.test -- node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand"
+    "test": "dotenv -e .env.test -- node --experimental-vm-modules node_modules/jest/bin/jest.js --runInBand --verbose"
   },
   "dependencies": {
     "express": "^4.18.2",
